# pycpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: stdex_download.cmake
include/pycpp/: allocator.hpp  boolean.hpp  declaration.hpp  dict.hpp  factorable.hpp  factorable_unique.hpp  factory.hpp  factory_default.hpp  factory_pool.hpp  function.hpp  instance.hpp  integer.hpp  intrusive_ptr.hpp  kernel.hpp  klass.hpp  list.hpp  method.hpp  module.hpp  none.hpp  object.hpp  pointer.hpp  pool.hpp  real.hpp  scope.hpp  string.hpp  tuple.hpp  type.hpp
src/: boolean.cpp  dict.cpp  factorable.cpp  function.cpp  instance.cpp  integer.cpp  kernel.cpp  klass.cpp  list.cpp  method.cpp  module.cpp  none.cpp  object.cpp  scope.cpp  string.cpp  tuple.cpp  type.cpp
test/test1/: CMakeLists.txt  main.cpp
