cmake_minimum_required(VERSION 3.0)

PROJECT(test1)

INCLUDE_DIRECTORIES( ${PYCPP_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${STDEX_INCLUDE_DIR} )

ADD_EXECUTABLE( ${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pycpp)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} stdex)